WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48307
Fix LayoutTests/canvas/philip/tests/2d.drawImage.null.html
https://bugs.webkit.org/show_bug.cgi?id=48307
Summary
Fix LayoutTests/canvas/philip/tests/2d.drawImage.null.html
Mike Lawther
Reported
2010-10-25 22:54:05 PDT
This layout test fails. See master bug:
https://bugs.webkit.org/show_bug.cgi?id=46506
Attachments
Patch
(1.90 KB, patch)
2010-11-10 21:01 PST
,
Matthew Delaney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matthew Delaney
Comment 1
2010-11-10 21:01:32 PST
Created
attachment 73575
[details]
Patch
Matthew Delaney
Comment 2
2010-11-11 00:07:35 PST
Comment on
attachment 73575
[details]
Patch Clearing flags on attachment: 73575 Committed
r71798
: <
http://trac.webkit.org/changeset/71798
>
Matthew Delaney
Comment 3
2010-11-11 00:07:43 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2010-11-11 01:20:02 PST
http://trac.webkit.org/changeset/71798
might have broken SnowLeopard Intel Release (Tests)
Helder Correia
Comment 5
2010-11-11 12:41:40 PST
***
Bug 49368
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug