2010-11-11  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Dan Bernstein.

        Fix LayoutTests/canvas/philip/tests/2d.drawImage.null.html
        https://bugs.webkit.org/show_bug.cgi?id=48307

        There are no new tests because this is a fix for a pre-existing failing test.)

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp: Corrected expection throwing cases to match up with spec.


Canonical link: https://commits.webkit.org/62274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71798 268f45cc-cd09-0410-ab3c-d52691b4dbfc